Implementation du CRUD pour les post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="<%= root_path %>">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="<%= salut_path %>">Salut</a>
+          <a class="nav-item nav-link" href="<%= posts_path %>">Article</a>
           <a class="nav-item nav-link" href="#">Pricing</a>
           <a class="nav-item nav-link disabled" href="#">Disabled</a>
         </div>
