Reference user dans les articles

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
             <div class="card-block">
                 <h4 class="card-title"><%= post.title %></h4>
                 <p class="card-text"><%= post.content %></p>
-                <a href="#{post_path(post.id)}" class="= btn btn-primary">Lire la suite</a> 
+                <%=link_to "Lire la suite", post_path(post.id), :class => "btn btn-primary"%>
             </div>
         </div>
     <% end %>
