--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,6 +1,8 @@
 %h1=@post.title
 %p
-    %span Posté le
+    %span Posté par
+    %span=@user.username 
+    %span le
     %span=@post.created_at.strftime("%Y-%m-%d")
     %span à
     %span=@post.created_at.strftime("%H:%M:%S")
