Affichage très basique des commentaire de chaque avis

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -20,3 +20,8 @@
                 =f.text_area :content, :class => "form-control", :placeholder => 'Entrez votre commentaire ici...'
                 =f.submit :class => "btn btn-primary"
 %hr
+    - @comm.each do |comm|
+        %p=comm.id
+        %p=comm.content
+
+    
