--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,11 +2,14 @@
 
 <div class="row">
     <% @posts.each do |post| %>
+        <% user = User.find(post.user_id) %>
         <div class="card col-sm-12 col-md-6 col-lg-4" style="margin-bottom : 2%">
                 <%#<img class="card-img-top" src="..." alt="Card image cap">%>
             <div class="card-block">
-                <h4 class="card-title"><%= post.title %></h4>
-                <p class="card-text"><%= post.content %></p>
+                <h4 class="card-title"><%=link_to post.title , post_path(post.id)%> </h4>
+                <p class="card-text">
+                    Posté par <%= user.username %> le <%=post.created_at.strftime("%Y-%m-%d")%> 
+                </p>
                 <%=link_to "Lire la suite", post_path(post.id), :class => "btn btn-primary"%>
             </div>
         </div>
@@ -14,3 +17,4 @@
 </div>
         
 
+   
