--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,8 @@
     width : 100%;
 }
 
-/*.new_form textarea{
-    height: 200px;
-}*/
+card-title.tg-title h3{
+    padding: 12px 10px 4px 20px !important;
+}
+
 
