--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,9 +6,9 @@
         <div class="card col-sm-12 col-md-6 col-lg-4" style="margin-bottom : 2%">
                 <%#<img class="card-img-top" src="..." alt="Card image cap">%>
             <div class="card-block">
-                <h4 class="card-title"><%=link_to post.title , post_path(post.id)%> </h4>
+                <h5 class="card-title"><%=link_to post.title , post_path(post.id)%> </h5>
                 <p class="card-text">
-                    Posté par <%= user.username %> le <%=post.created_at.strftime("%Y-%m-%d")%> 
+                    Posté par <%= user.username %> le <%=post.created_at.strftime("%d-%m-%Y")%> 
                 </p>
                 <%=link_to "Lire la suite", post_path(post.id), :class => "btn btn-primary"%>
             </div>
